--- a/vignettes/biodivercity.Rmd
+++ b/vignettes/biodivercity.Rmd
@@ -61,7 +61,7 @@ devtools::load_all() # to knit manually w latest changes (not built/installed ye
 
 ## Data sources
 
-Development of a Biodiversity Index for Residential Towns using Biodiversity Field Surveys. 14 June 2016, 6.5 years, Ministry of National Development Research Fund (MNDRF) Grant. Awarded to the National University of Singapore (host institution) and the Singapore Housing & Development Board. 
+Development of a Biodiversity Index for Residential Towns using Biodiversity Field Surveys, 2016–2022. Ministry of National Development Research Fund (MNDRF) Grant. Awarded to the National University of Singapore and the Singapore Housing & Development Board. 
 
 <br>
 
