amend documentation, add demo of converting data to required format for build-models.Rmd
- Convert list to df in process-landscape
- Summarise data per point in process-animal

--- a/vignettes/more/animals-data-summaries.Rmd
+++ b/vignettes/more/animals-data-summaries.Rmd
@@ -30,7 +30,7 @@ library("ggplot2") # data visualisation
 
 ## Summarise data 
 
-Load the example data. Refer to `help(animal_observations)` and `help(animal_surveys)` for more details on these datasets, as well as `vignette("process-animal")` on how the animal surveys were processed.
+Load the example data. Refer to `help(animal_observations)` and `help(animal_surveys)` for more details on these datasets, as well as `vignette("process-animal")` on how the animal surveys may be processed.
 
 ```{r}
 data("animal_observations")
