--- a/vignettes/process-animal.Rmd
+++ b/vignettes/process-animal.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Process Animal Data"
-subtitle: "Process data from animal surveys conducted at point locations"
+subtitle: "Format, check and summarise data from animal surveys conducted at point locations"
 author: "Edwin Tan"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
@@ -10,7 +10,7 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-Animal observations from on-site surveys can be used to build predictive models of animal diversity, or summarised to directly compare animal diversity between different areas or time periods. This article outlines the ways to format, process and check the animal data.
+Animal observations from on-site surveys can be used to build predictive models of animal diversity, or summarised to directly compare animal diversity between different areas or time periods. This article outlines the ways to format, check and process the animal data to build the predictive models.
 
 <br>
 
@@ -132,3 +132,21 @@ filtered_observations %>%
 ```
 
 <br>
+
+---
+
+## Summarise data
+
+To build predictive models for a chosen animal group, the animal observations will need to be aggregated at the level of each sampling point. For example, we can tally the number of bird (animal group 'Aves') species per point using the function `tally_observations()`. Note that this function avoids double-counting group-level records, by acting as a wrapper to the function `check_taxongrps()` (see previous section).
+
+```{r use tally_observations, message = FALSE}
+
+animals_perpoint <- 
+  tally_observations(observations = animal_observations, 
+                     survey_ref = animal_surveys,
+                     level = "point",
+                     specify_taxon = "Aves")
+
+head(animals_perpoint)
+```
+
